--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,12 @@ set (LIBSD_FRAMEWORK_DIR ${LIBSD_INCLUDE_DIR}/sd/framework)
 set (LIBSD_FRAMEWORK_INPUT_DIR ${LIBSD_FRAMEWORK_DIR}/input)
 set (LIBSD_GAMEPLAY_DIR ${LIBSD_INCLUDE_DIR}/sd/gameplay)
 set (LIBSD_FRAMEWORK_INTERFACES_DIR ${LIBSD_FRAMEWORK_DIR}/interfaces)
+set (LIBSD_FRAMEWORK_TIME_DIR ${LIBSD_FRAMEWORK_DIR}/time)
+
+set (LIBSD_FRAMEWORK_TIME_HEADERS
+    "${LIBSD_FRAMEWORK_TIME_DIR}/clock.h"
+)
+
 set (LIBSD_FRAMEWORK_INPUT_HEADERS
     "${LIBSD_FRAMEWORK_INPUT_DIR}/key_state_type.h"
     "${LIBSD_FRAMEWORK_INPUT_DIR}/key_state.h"
@@ -28,6 +34,10 @@ set (LIBSD_FRAMEWORK_INTERFACES_HEADERS
     "${LIBSD_FRAMEWORK_INTERFACES_DIR}/IComponent.h"
 )
 
+set (LIBSD_FRAMEWORK_TIME_SOURCES
+    "${CMAKE_CURRENT_SOURCE_DIR}/clock.cc"
+)
+
 set (LIBSD_FRAMEWORK_INPUT_SOURCES
     "${CMAKE_CURRENT_SOURCE_DIR}/key_state.cc"
     "${CMAKE_CURRENT_SOURCE_DIR}/key_tracker.cc"
@@ -41,11 +51,20 @@ set (LIBSD_GAMEPLAY_SOURCES
 target_sources(
     libsd
     PRIVATE
+       ${LIBSD_FRAMEWORK_TIME_HEADERS}
+       ${LIBSD_FRAMEWORK_TIME_SOURCES}
        ${LIBSD_FRAMEWORK_INPUT_HEADERS}
        ${LIBSD_FRAMEWORK_INPUT_SOURCES}
        ${LIBSD_FRAMEWORK_INTERFACES_HEADERS}
        ${LIBSD_GAMEPLAY_HEADERS}
        ${LIBSD_GAMEPLAY_SOURCES}
+)
+
+source_group(
+    "framework\\time"
+    FILES
+        ${LIBSD_FRAMEWORK_TIME_HEADERS}
+        ${LIBSD_FRAMEWORK_TIME_SOURCES}
 )
 
 source_group(
