--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,6 +14,7 @@ set (LIBSD_FRAMEWORK_INPUT_DIR ${LIBSD_FRAMEWORK_DIR}/input)
 set (LIBSD_GAMEPLAY_DIR ${LIBSD_INCLUDE_DIR}/sd/gameplay)
 set (LIBSD_FRAMEWORK_INTERFACES_DIR ${LIBSD_FRAMEWORK_DIR}/interfaces)
 set (LIBSD_FRAMEWORK_TIME_DIR ${LIBSD_FRAMEWORK_DIR}/time)
+set (LIBSD_FRAMEWORK_LOGGING_DIR ${LIBSD_FRAMEWORK_DIR}/logging)
 
 set (LIBSD_FRAMEWORK_TIME_HEADERS
     "${LIBSD_FRAMEWORK_TIME_DIR}/clock.h"
@@ -32,6 +33,11 @@ set (LIBSD_GAMEPLAY_HEADERS
 
 set (LIBSD_FRAMEWORK_INTERFACES_HEADERS
     "${LIBSD_FRAMEWORK_INTERFACES_DIR}/IComponent.h"
+)
+
+set (LIBSD_FRAMEWORK_LOGGING_SOURCES
+    "${LIBSD_FRAMEWORK_LOGGING_DIR}/logger.h"
+    "${CMAKE_CURRENT_SOURCE_DIR}/logger.cc"
 )
 
 set (LIBSD_FRAMEWORK_TIME_SOURCES
@@ -58,6 +64,7 @@ target_sources(
        ${LIBSD_FRAMEWORK_INTERFACES_HEADERS}
        ${LIBSD_GAMEPLAY_HEADERS}
        ${LIBSD_GAMEPLAY_SOURCES}
+       ${LIBSD_FRAMEWORK_LOGGING_SOURCES}
 )
 
 source_group(
@@ -85,4 +92,10 @@ source_group(
     FILES
         ${LIBSD_GAMEPLAY_HEADERS}
         ${LIBSD_GAMEPLAY_SOURCES}   
+)
+
+source_group(
+    "framework\\logging"
+    FILES
+        ${LIBSD_FRAMEWORK_LOGGING_SOURCES}   
 )
