modifications to logging

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,9 +15,16 @@ set (LIBSD_GAMEPLAY_DIR ${LIBSD_INCLUDE_DIR}/sd/gameplay)
 set (LIBSD_FRAMEWORK_INTERFACES_DIR ${LIBSD_FRAMEWORK_DIR}/interfaces)
 set (LIBSD_FRAMEWORK_TIME_DIR ${LIBSD_FRAMEWORK_DIR}/time)
 set (LIBSD_FRAMEWORK_LOGGING_DIR ${LIBSD_FRAMEWORK_DIR}/logging)
+set (LIBSD_GAMEPLAY_TIME_DIR ${LIBSD_GAMEPLAY_DIR}/time)
+
+set (LIBSD_GAMEPLAY_TIME_SOURCES
+    "${LIBSD_GAMEPLAY_TIME_DIR}/game_clock.h"
+    "${CMAKE_CURRENT_SOURCE_DIR}/game_clock.cc"
+)
 
 set (LIBSD_FRAMEWORK_TIME_HEADERS
     "${LIBSD_FRAMEWORK_TIME_DIR}/clock.h"
+    "${LIBSD_FRAMEWORK_TIME_DIR}/suspension.h"
 )
 
 set (LIBSD_FRAMEWORK_INPUT_HEADERS
@@ -33,15 +40,19 @@ set (LIBSD_GAMEPLAY_HEADERS
 
 set (LIBSD_FRAMEWORK_INTERFACES_HEADERS
     "${LIBSD_FRAMEWORK_INTERFACES_DIR}/IComponent.h"
+    "${LIBSD_FRAMEWORK_INTERFACES_DIR}/IAction.h"
 )
 
 set (LIBSD_FRAMEWORK_LOGGING_SOURCES
     "${LIBSD_FRAMEWORK_LOGGING_DIR}/logger.h"
+    "${LIBSD_FRAMEWORK_LOGGING_DIR}/channel.h"
+    "${LIBSD_FRAMEWORK_LOGGING_DIR}/log_level_t.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/logger.cc"
 )
 
 set (LIBSD_FRAMEWORK_TIME_SOURCES
     "${CMAKE_CURRENT_SOURCE_DIR}/clock.cc"
+    "${CMAKE_CURRENT_SOURCE_DIR}/suspension.cc"
 )
 
 set (LIBSD_FRAMEWORK_INPUT_SOURCES
@@ -65,6 +76,7 @@ target_sources(
        ${LIBSD_GAMEPLAY_HEADERS}
        ${LIBSD_GAMEPLAY_SOURCES}
        ${LIBSD_FRAMEWORK_LOGGING_SOURCES}
+       ${LIBSD_GAMEPLAY_TIME_SOURCES}
 )
 
 source_group(
@@ -98,4 +110,10 @@ source_group(
     "framework\\logging"
     FILES
         ${LIBSD_FRAMEWORK_LOGGING_SOURCES}   
+)
+
+source_group(
+    "gameplay\\time"
+    FILES
+        ${LIBSD_GAMEPLAY_TIME_SOURCES}   
 )
