--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,7 +19,10 @@ set (LIBSD_GAMEPLAY_TIME_DIR ${LIBSD_GAMEPLAY_DIR}/time)
 
 set (LIBSD_GAMEPLAY_TIME_SOURCES
     "${LIBSD_GAMEPLAY_TIME_DIR}/game_clock.h"
+    "${LIBSD_GAMEPLAY_TIME_DIR}/timer.h"
+    "${LIBSD_GAMEPLAY_TIME_DIR}/timer_status_t.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/game_clock.cc"
+    "${CMAKE_CURRENT_SOURCE_DIR}/timer.cc"
 )
 
 set (LIBSD_FRAMEWORK_TIME_HEADERS
