use glfw dll and stop storing references in logger

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -3,4 +3,13 @@ add_executable(sd sd.cc)
 set_target_properties(sd PROPERTIES CXX_STANDARD 20)
 add_dependencies(sd libsd)
 target_link_libraries(sd PRIVATE libsd)
-target_compile_definitions(sd PRIVATE GLFW_INCLUDE_NONE)
+install(TARGETS sd
+    RUNTIME DESTINATION bin
+    LIBRARY DESTINATION lib
+    ARCHIVE DESTINATION lib
+    )
+#add_custom_command(TARGET sd POST_BUILD
+#    COMMAND ${CMAKE_COMMAND} -E copy_directory
+#    "$<TARGET_RUNTIME_DLLS:glfw>"
+#    "$<TARGET_FILE_DIR:sd"
+#)
