add key change callback

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -50,6 +50,7 @@ set (LIBSD_GAMEPLAY_HEADERS
 set (LIBSD_FRAMEWORK_INTERFACES_HEADERS
     "${LIBSD_FRAMEWORK_INTERFACES_DIR}/IComponent.h"
     "${LIBSD_FRAMEWORK_INTERFACES_DIR}/IAction.h"
+    "${LIBSD_FRAMEWORK_INTERFACES_DIR}/key_change_callback.h"
 )
 
 set (LIBSD_FRAMEWORK_LOGGING_SOURCES
